--- a/inventario/templates/inventario/listaCategorias.html
+++ b/inventario/templates/inventario/listaCategorias.html
@@ -10,7 +10,7 @@
             <div class="page-title-box">
                 <div class="page-title-right">
                     <ol class="breadcrumb m-0">
-                        <li class="breadcrumb-item"><a href="javascript: void(0);">Inventario</a></li>
+                        <li class="breadcrumb-item"><a href="{% url 'listaProductos' %}">Inventario</a></li>
                         <li class="breadcrumb-item active">Categorías</li>
                     </ol>
                 </div>
