--- a/ventas/templates/ventas/pdfVenta.html
+++ b/ventas/templates/ventas/pdfVenta.html
@@ -9,10 +9,9 @@
   <title>Comprobante de pago - PDF</title>
 
   <link rel="shortcut icon" href="{% static 'imagenes/logo.png' %}" type="image/x-icon">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/pdf/theme.minc619.css' %}">
   <link rel="stylesheet" href="{% static 'css/pdf/vendor.min.css' %}">
-  <link href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="{% static 'css/mdi.css' %}">
 </head>
 
 <body>
@@ -22,10 +21,6 @@
         <div class="d-flex justify-content-end d-print-none gap-3">
           <a class="btn btn-white" onclick="generatePDF()">
             <i class="mdi mdi-file-download me-1"></i> PDF
-          </a>
-
-          <a class="btn btn-primary" href="javascript:;" onclick="window.print(); return false;">
-            <i class="mdi mdi-printer me-1"></i> Print details
           </a>
         </div>
         <div class="card card-lg mb-5">
@@ -113,29 +108,6 @@
     </div>
     <!-- End Content -->
   </main>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-  <script>
-    function generatePDF() {
-      const element = document.querySelector('.card.card-lg.mb-5');
-
-      html2canvas(element, {
-        scale: 2,
-        useCORS: true,
-        logging: false
-      }).then(canvas => {
-        const pdf = new jspdf.jsPDF('p', 'mm', 'a4');
-        const imgData = canvas.toDataURL('image/png');
-
-        const pdfWidth = pdf.internal.pageSize.getWidth();
-        const pdfHeight = (canvas.height * pdfWidth) / canvas.width;
-
-        pdf.addImage(imgData, 'PNG', 0, 0, pdfWidth, pdfHeight);
-
-        pdf.save('factura.pdf');
-      });
-    }
-  </script>
 
 </body>
 
