--- a/ventas/templates/ventas/listaVentas.html
+++ b/ventas/templates/ventas/listaVentas.html
@@ -24,7 +24,7 @@
                 <div class="card-body">
                     <div class="d-flex justify-content-between align-items-center mb-2">
                         <a class="btn btn-success btn-sm rounded-pill shadow-sm" href="{% url 'crearVenta' %}">
-                            <i class="fa-solid fa-plus"></i> Agregar venta
+                            <i class="mdi mdi-plus"></i> Agregar venta
                         </a>
                     </div>
 
@@ -93,7 +93,7 @@
                                             <i class="mdi mdi-eye-outline"></i>Ver detalles
                                         </a>
                                         <a class="btn btn-bg font-14 btn-info btn-ver d-inline-flex"
-                                            href="{% url 'pdfVenta' venta.venta_id %}">
+                                            href="javascript: void(0);">
                                             PDF
                                         </a>
                                         <button type="button" class="btn btn-danger btn-sm btn-eliminar d-inline-flex"
@@ -113,65 +113,6 @@
         </div>
     </div>
 </div>
-<script>
-    function getCookie(name) {
-        let cookieValue = null;
-        if (document.cookie && document.cookie !== '') {
-            const cookies = document.cookie.split(';');
-            for (let i = 0; i < cookies.length; i++) {
-                const cookie = cookies[i].trim();
-                if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                    break;
-                }
-            }
-        }
-        return cookieValue;
-    }
 
-    function eliminarVenta(btnEliminar) {
-        const ventaId = btnEliminar.getAttribute('data-id');
-        const fila = btnEliminar.closest('tr');
-
-        if (confirm('¿Estás seguro de que deseas eliminar esta venta?')) {
-            btnEliminar.disabled = true;
-            btnEliminar.innerHTML = '<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Eliminando...';
-
-            fetch(`/ventas/${ventaId}/eliminar`, {
-                method: 'DELETE',
-                headers: {
-                    'X-Requested-With': 'XMLHttpRequest',
-                    'X-CSRFToken': getCookie('csrftoken')
-                }
-            })
-                .then(response => {
-                    if (!response.ok) throw new Error("Error en la respuesta del servidor");
-                    return response.json();
-                })
-                .then(data => {
-                    if (data.success) {
-                        fila.remove();
-                    } else {
-                        btnEliminar.disabled = false;
-                        btnEliminar.innerHTML = '<i class="mdi mdi-delete"></i> Eliminar';
-                        console.log('Error al eliminar el servidor:', data.message);
-                    }
-                })
-                .catch(error => {
-                    btnEliminar.disabled = false;
-                    btnEliminar.innerHTML = '<i class="mdi mdi-delete"></i> Eliminar';
-                    console.error('Error al eliminar el producto:', error);
-                });
-        }
-    }
-
-    document.addEventListener("DOMContentLoaded", function () {
-        document.addEventListener('click', function (event) {
-            const btnEliminar = event.target.closest('.btn-eliminar');
-            if (btnEliminar) {
-                eliminarVenta(btnEliminar);
-            }
-        });
-    });
-</script>
+<script src="{% static 'js/listas/listaVentas.js' %}"></script>
 {% endblock content %}
