--- a/usuarios/templates/usuarios/crearEmpresa.html
+++ b/usuarios/templates/usuarios/crearEmpresa.html
@@ -272,5 +272,5 @@
     </div>
 </div>
 </div>
-<script src="{% static js/landing/empresa.js %}"></script>
+<script src="{% static 'js/landing/empresa.js' %}"></script>
 {% endblock content %}
