--- a/ventas/templates/ventas/formCliente.html
+++ b/ventas/templates/ventas/formCliente.html
@@ -1,4 +1,5 @@
 {% extends 'inventario/base.html' %}
+{% load static %}
 {% block content %}
 <div class="container m-5">
   <h1 class="mb-4">
@@ -48,11 +49,8 @@
       </div>
     </div>
     <button type="submit" class="btn btn-primary">
-      <i class="fas fa-save"></i> Guardar
+      <i class="mdi mdi-content-save"></i> Guardar
     </button>
   </form>
 </div>
-<script>
-  console.log("PK:", "{{ form.instance }}");
-</script>
 {% endblock %}
