--- a/chat/templates/chat/chat.html
+++ b/chat/templates/chat/chat.html
@@ -51,6 +51,8 @@
       </div>
     </div>
   </div>
+  <input type="hidden" id="url-chat" value="{% url 'chat_api' %}">
+  <input type="hidden" id="url-imagen" value="{% static 'imagenes/bot.png' %}">
 </div>
 <script src="{% static 'js/chat/chat.js' %}"></script>
 <script src="{% static 'js/chat/marked.js' %}"></script>
