--- a/usuarios/templates/usuarios/landingCuerpo.html
+++ b/usuarios/templates/usuarios/landingCuerpo.html
@@ -14,22 +14,15 @@
           "Automatiza tu negocio, controla tu stock y aumenta tus ventas desde
           cualquier dispositivo."
         </p>
-        <a
-          href="{% url 'home' %}#caracteristicas"
-          class="btn btn-primary btn-lg"
-        >
+        <a href="{% url 'home' %}#caracteristicas" class="btn btn-primary btn-lg">
           Leer más
         </a>
       </div>
 
       <!-- Imagen a la derecha sin recuadro -->
       <div class="col-lg-6 text-center">
-        <img
-          src="{% static 'imagenes/landing/startup.svg' %}"
-          alt="Asistente automático"
-          class="img-fluid"
-          style="max-height: 430px"
-        />
+        <img src="{% static 'imagenes/landing/startup.svg' %}" alt="Asistente automático" class="img-fluid"
+          style="max-height: 430px" />
       </div>
     </div>
   </div>
@@ -42,11 +35,7 @@
   <div class="row">
     <div class="col-lg-3 col-md-4 col-sm-6 text-center pb-md-2 mb-3 mb-lg-4">
       <div class="d-inline-block bg-secondary rounded-circle p-3 mb-4">
-        <img
-          src="{% static 'imagenes/landing/chat.svg' %}"
-          width="32"
-          alt="Icon"
-        />
+        <img src="{% static 'imagenes/landing/chat.svg' %}" width="32" alt="Icon" />
       </div>
       <h3 class="h5 pb-1 mb-2">Recibe asesoría</h3>
       <p class="fs-sm">
@@ -57,11 +46,7 @@
 
     <div class="col-lg-3 col-md-4 col-sm-6 text-center pb-md-2 mb-3 mb-lg-4">
       <div class="d-inline-block bg-secondary rounded-circle p-3 mb-4">
-        <img
-          src="{% static 'imagenes/landing/analytics.svg' %}"
-          width="32"
-          alt="Icon"
-        />
+        <img src="{% static 'imagenes/landing/analytics.svg' %}" width="32" alt="Icon" />
       </div>
       <h3 class="h5 pb-1 mb-2">Análisis de ventas</h3>
       <p class="fs-sm">
@@ -72,11 +57,7 @@
 
     <div class="col-lg-3 col-md-4 col-sm-6 text-center pb-md-2 mb-3 mb-lg-4">
       <div class="d-inline-block bg-secondary rounded-circle p-3 mb-4">
-        <img
-          src="{% static 'imagenes/landing/bell.svg' %}"
-          width="32"
-          alt="Icon"
-        />
+        <img src="{% static 'imagenes/landing/bell.svg' %}" width="32" alt="Icon" />
       </div>
       <h3 class="h5 pb-1 mb-2">Notificaciones inteligentes</h3>
       <p class="fs-sm">
@@ -87,11 +68,7 @@
 
     <div class="col-lg-3 col-md-4 col-sm-6 text-center pb-md-2 mb-3 mb-lg-4">
       <div class="d-inline-block bg-secondary rounded-circle p-3 mb-4">
-        <img
-          src="{% static 'imagenes/landing/tasks.svg' %}"
-          width="32"
-          alt="Icon"
-        />
+        <img src="{% static 'imagenes/landing/tasks.svg' %}" width="32" alt="Icon" />
       </div>
       <h3 class="h5 pb-1 mb-2">Tareas organizadas</h3>
       <p class="fs-sm">
@@ -102,11 +79,7 @@
 
     <div class="col-lg-3 col-md-4 col-sm-6 text-center pb-md-2 mb-3 mb-lg-4">
       <div class="d-inline-block bg-secondary rounded-circle p-3 mb-4">
-        <img
-          src="{% static 'imagenes/landing/calendar.svg' %}"
-          width="32"
-          alt="Icon"
-        />
+        <img src="{% static 'imagenes/landing/calendar.svg' %}" width="32" alt="Icon" />
       </div>
       <h3 class="h5 pb-1 mb-2">Seguimiento del progreso</h3>
       <p class="fs-sm">
@@ -117,11 +90,7 @@
 
     <div class="col-lg-3 col-md-4 col-sm-6 text-center pb-md-2 mb-3 mb-lg-4">
       <div class="d-inline-block bg-secondary rounded-circle p-3 mb-4">
-        <img
-          src="{% static 'imagenes/landing/add-group.svg' %}"
-          width="32"
-          alt="Icon"
-        />
+        <img src="{% static 'imagenes/landing/add-group.svg' %}" width="32" alt="Icon" />
       </div>
       <h3 class="h5 pb-1 mb-2">Gestión de usuarios</h3>
       <p class="fs-sm">
@@ -132,11 +101,7 @@
 
     <div class="col-lg-3 col-md-4 col-sm-6 text-center pb-md-2 mb-3 mb-lg-4">
       <div class="d-inline-block bg-secondary rounded-circle p-3 mb-4">
-        <img
-          src="{% static 'imagenes/landing/headset.svg' %}"
-          width="32"
-          alt="Icon"
-        />
+        <img src="{% static 'imagenes/landing/headset.svg' %}" width="32" alt="Icon" />
       </div>
       <h3 class="h5 pb-1 mb-2">Soporte 24/7</h3>
       <p class="fs-sm">
@@ -147,11 +112,7 @@
 
     <div class="col-lg-3 col-md-4 col-sm-6 text-center pb-md-2 mb-3 mb-lg-4">
       <div class="d-inline-block bg-secondary rounded-circle p-3 mb-4">
-        <img
-          src="{% static 'imagenes/landing/shield.svg' %}"
-          width="32"
-          alt="Icon"
-        />
+        <img src="{% static 'imagenes/landing/shield.svg' %}" width="32" alt="Icon" />
       </div>
       <h3 class="h5 pb-1 mb-2">Seguridad de datos</h3>
       <p class="fs-sm">
@@ -162,22 +123,12 @@
   </div>
 </section>
 
-<section
-  class="container pt-3 pt-md-4 pt-lg-5 pb-2 mt-lg-2 mt-xl-4"
-  id="beneficios"
->
+<section class="container pt-3 pt-md-4 pt-lg-5 pb-2 mt-lg-2 mt-xl-4" id="beneficios">
   <div class="row align-items-center">
     <div class="rellax col-md-7">
-      <img
-        src="{% static 'imagenes/landing/muestra.jpg' %}"
-        class="d-block mx-auto"
-        width="746"
-        alt="Image"
-      />
+      <img src="{% static 'imagenes/landing/muestra.jpg' %}" class="d-block mx-auto" width="746" alt="Image" />
     </div>
-    <div
-      class="rellax col-md-5 col-xl-4 offset-xl-1 d-flex d-sm-block flex-column"
-    >
+    <div class="rellax col-md-5 col-xl-4 offset-xl-1 d-flex d-sm-block flex-column">
       <h2 class="pb-3 pt-2 pt-md-0">
         Maneja tu empresa desde la palma de tu mano
       </h2>
@@ -217,19 +168,14 @@
             <div class="card-body">
               <div class="d-flex align-items-center pb-2 pb-md-3 mb-4">
                 <div class="flex-shrink-0 bg-secondary rounded-3">
-                  <img
-                    src="{% static 'imagenes/landing/basic.png' %}"
-                    width="84"
-                    alt="Icon"
-                  />
+                  <img src="{% static 'imagenes/landing/basic.png' %}" width="84" alt="Icon" />
                 </div>
                 <div class="ps-4">
                   <h3 class="fs-lg fw-normal text-body mb-2">Básico</h3>
                   <h4 class="h3 lh-1 mb-0">
                     <span data-monthly-price>S/50.00</span>
                     <span class="text-body fs-sm fw-normal">
-                      / mensualmente</span
-                    >
+                      / mensualmente</span>
                   </h4>
                 </div>
               </div>
@@ -248,62 +194,41 @@
                 </li>
                 <li class="d-flex text-muted mb-2">
                   <i class="mdi mdi-close fs-xl me-1"></i>
-                  Tienda online personalizada
-                </li>
-                <li class="d-flex text-muted mb-2">
-                  <i class="mdi mdi-close fs-xl me-1"></i>
                   Uso de chatbot inteligente
-                </li>
-                <li class="d-flex text-muted">
-                  <i class="mdi mdi-close fs-xl me-1"></i>
-                  Predicciones con IA
                 </li>
               </ul>
             </div>
             <div class="card-footer border-0 pt-0 pb-4">
-              <a href="{% url 'pagar' %}" class="btn btn-outline-primary w-100"
-                >Comprar</a
-              >
+              <a href="{% url 'crear_pago' %}" class="btn btn-outline-primary w-100">Comprar</a>
             </div>
           </div>
         </div>
         <div class="col">
-          <div
-            class="card h-100 border-0 bg-primary shadow-primary shadow-dark-mode-none p-xxl-3 min-width-18rem"
-          >
+          <div class="card h-100 border-0 bg-primary shadow-primary shadow-dark-mode-none p-xxl-3 min-width-18rem">
             <div class="card-body">
               <div class="d-flex align-items-center pb-2 pb-md-3 mb-4">
                 <div class="flex-shrink-0 rounded-3 bg-white-10">
-                  <img
-                    src="{% static 'imagenes/landing/standard.png' %}"
-                    width="84"
-                    alt="Icon"
-                  />
+                  <img src="{% static 'imagenes/landing/standard.png' %}" width="84" alt="Icon" />
                 </div>
                 <div class="ps-4">
                   <h3 class="fs-lg fw-normal text-light opacity-70 mb-2">
-                    Estándar
+                    Premium
                   </h3>
                   <h4 class="h3 text-light lh-1 mb-0">
-                    <span data-monthly-price>S/100.00</span>
+                    <span data-monthly-price>S/80.00</span>
                     <span class="fs-sm fw-normal opacity-70">
-                      / mensualmente</span
-                    >
+                      / mensualmente</span>
                   </h4>
                 </div>
               </div>
               <ul class="list-unstyled fs-sm pb-md-3 mb-3">
                 <li class="d-flex text-light mb-2">
                   <i class="mdi mdi-check fs-xl me-1"></i>
-                  <span class="opacity-70"
-                    >Ventas y facturación ilimitadas</span
-                  >
+                  <span class="opacity-70">Ventas y facturación ilimitadas</span>
                 </li>
                 <li class="d-flex text-light mb-2">
                   <i class="mdi mdi-check fs-xl me-1"></i>
-                  <span class="opacity-70"
-                    >Gestión de inventario y productos</span
-                  >
+                  <span class="opacity-70">Gestión de inventario y productos</span>
                 </li>
                 <li class="d-flex text-light mb-2">
                   <i class="mdi mdi-check fs-xl me-1"></i>
@@ -311,77 +236,12 @@
                 </li>
                 <li class="d-flex text-light mb-2">
                   <i class="mdi mdi-check fs-xl me-1"></i>
-                  <span class="opacity-70">Tienda online personalizada</span>
-                </li>
-                <li class="d-flex text-light opacity-50 mb-2">
-                  <i class="mdi mdi-close fs-xl me-1"></i>
-                  Uso de chatbot inteligente
-                </li>
-                <li class="d-flex text-light opacity-50">
-                  <i class="mdi mdi-close fs-xl me-1"></i>
-                  Predicciones con IA
+                  <span class="opacity-70">Uso de chatbot inteligente</span>
                 </li>
               </ul>
             </div>
             <div class="card-footer border-0 pt-0 pb-4">
-              <a href="{% url 'pagar' %}" class="btn btn-light w-100"
-                >Comprar</a
-              >
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100 border-0 shadow-sm p-xxl-3 min-width-18rem">
-            <div class="card-body">
-              <div class="d-flex align-items-center pb-2 pb-md-3 mb-4">
-                <div class="flex-shrink-0 bg-secondary rounded-3">
-                  <img
-                    src="{% static 'imagenes/landing/ultimate.png' %}"
-                    width="84"
-                    alt="Icon"
-                  />
-                </div>
-                <div class="ps-4">
-                  <h3 class="fs-lg fw-normal text-body mb-2">Premium</h3>
-                  <h4 class="h3 lh-1 mb-0">
-                    <span data-monthly-price>S/150.00</span>
-                    <span class="text-body fs-sm fw-normal">
-                      / mensualmente</span
-                    >
-                  </h4>
-                </div>
-              </div>
-              <ul class="list-unstyled fs-sm pb-md-3 mb-3">
-                <li class="d-flex mb-2">
-                  <i class="mdi mdi-check fs-xl text-primary me-1"></i>
-                  Ventas y facturación ilimitadas
-                </li>
-                <li class="d-flex mb-2">
-                  <i class="mdi mdi-check fs-xl text-primary me-1"></i>
-                  Gestión de inventario y productos
-                </li>
-                <li class="d-flex mb-2">
-                  <i class="mdi mdi-check fs-xl me-1"></i>
-                  Notificaciones por whatsapp
-                </li>
-                <li class="d-flex mb-2">
-                  <i class="mdi mdi-check fs-xl me-1"></i>
-                  Tienda online personalizada
-                </li>
-                <li class="d-flex mb-2">
-                  <i class="mdi mdi-check fs-xl me-1"></i>
-                  Uso de chatbot inteligente
-                </li>
-                <li class="d-flex mb-2">
-                  <i class="mdi mdi-check fs-xl me-1"></i>
-                  Predicciones con IA
-                </li>
-              </ul>
-            </div>
-            <div class="card-footer border-0 pt-0 pb-4">
-              <a href="{% url 'pagar' %}" class="btn btn-outline-primary w-100"
-                >Comprar</a
-              >
+              <a href="{% url 'crear_pago' %}" class="btn btn-light w-100">Comprar</a>
             </div>
           </div>
         </div>
@@ -390,45 +250,27 @@
   </div>
 </section>
 
-<section class="container" id="contacto">
-  <div
-    class="container content-space-2 content-space-t-xl-3 content-space-b-lg-3"
-  >
-    <!-- Heading -->
+<section class="container" id="asesores">
+  <div class="container content-space-2 content-space-t-xl-3 content-space-b-lg-3">
     <h2 class="h1 bg-armonioso text-center pb-3 pb-md-4">Nuestros asesores</h2>
-    <div class="w-md-75 w-lg-50 text-center mx-md-auto mb-5">
-      <p class="text-muted">
-        Conecta con nuestros expertos para automatizar tu negocio, controlar tu
-        stock y aumentar tus ventas.
-      </p>
-    </div>
 
     <div class="row mb-5">
       <!-- Asesor 1 -->
       <div class="col-sm-6 col-lg-4 mb-4">
         <div class="card card-sm h-100 text-center card-asesor p-3">
           <div class="p-3">
-            <img
-              class="asesor-img mx-auto d-block"
-              src="{% static 'imagenes/landing/jhon.jpg' %}"
-              alt="Cristian Eguavil1"
-              width="50%"
-              height="50%"
-              style="object-fit: cover"
-            />
+            <img class="asesor-img mx-auto d-block" src="{% static 'imagenes/landing/uncp.png' %}"
+              alt="UNCP" width="50%" height="50%" style="object-fit: cover" />
           </div>
           <div class="card-body">
-            <h4 class="card-title">Cristian Eguavil1</h4>
+            <h4 class="card-title">Universidad Nacional del Centro del Perú (UNCP)</h4>
             <p class="card-text">
-              Especialista en automatización de procesos y atención
-              personalizada.
+              Nos ayuda a visualizar y promocionar nuestro software a través de sus canales oficiales.
             </p>
-            <a
-              class="btn-whatsapp"
-              href="https://wa.me/51923356855?text=Hola%20Cristian%20Eguavil,%20me%20llamo%20[NOMBRE]%20y%20me%20dedico%20al%20rubro%20de%20[RUBRO].%20Me%20gustaría%20recibir%20más%20información."
-              target="_blank"
-            >
-              Contactar por WhatsApp
+            <a class="btn-whatsapp"
+              href="{% url 'crear_pago' %}"
+              target="_blank">
+              Comprar
             </a>
           </div>
         </div>
@@ -438,26 +280,18 @@
       <div class="col-sm-6 col-lg-4 mb-4">
         <div class="card card-sm h-100 text-center card-asesor p-3">
           <div class="p-3">
-            <img
-              class="asesor-img mx-auto d-block"
-              src="{% static 'imagenes/landing/jhon.jpg' %}"
-              alt="Cristian Eguavil2"
-              width="100"
-              height="100"
-              style="object-fit: cover"
-            />
+            <img class="asesor-img mx-auto d-block" src="{% static 'imagenes/landing/fis.png' %}"
+              alt="fis" width="100" height="100" style="object-fit: cover" />
           </div>
           <div class="card-body">
-            <h4 class="card-title">Cristian Eguavil2</h4>
+            <h4 class="card-title">Facultad de Ingeniería de Sistemas (UNCP)</h4>
             <p class="card-text">
-              Experto en gestión de inventarios y optimización de ventas.
+              Nos brinda apoyo técnico y académico para mejorar continuamente nuestro software.
             </p>
-            <a
-              class="btn-whatsapp"
-              href="https://wa.me/51923356855?text=Hola%20Cristian%20Eguavil2,%20me%20llamo%20[NOMBRE]%20y%20me%20dedico%20al%20rubro%20de%20[RUBRO].%20Me%20gustaría%20recibir%20más%20información."
-              target="_blank"
-            >
-              Contactar por WhatsApp
+            <a class="btn-whatsapp"
+              href="{% url 'crear_pago' %}"
+              target="_blank">
+              Comprar
             </a>
           </div>
         </div>
@@ -467,26 +301,18 @@
       <div class="col-sm-6 col-lg-4 mb-4">
         <div class="card card-sm h-100 text-center card-asesor p-3">
           <div class="p-3">
-            <img
-              class="asesor-img mx-auto d-block"
-              src="{% static 'imagenes/landing/jhon.jpg' %}"
-              alt="Cristian Eguavil3"
-              width="150"
-              height="100"
-              style="object-fit: cover"
-            />
+            <img class="asesor-img mx-auto d-block" src="{% static 'imagenes/landing/incuba.jpg' %}"
+              alt="incuba" width="150" height="100" style="object-fit: cover" />
           </div>
           <div class="card-body">
-            <h4 class="card-title">Cristian Eguavil3</h4>
+            <h4 class="card-title">Incubadora de empresas (UNCP)</h4>
             <p class="card-text">
-              Asesora en integración de sistemas y soporte técnico.
+              Nos proporciona orientación empresarial y recursos para el desarrollo de nuestro software.
             </p>
-            <a
-              class="btn-whatsapp"
-              href="https://wa.me/5192335685?text=Hola%20Cristian%20Eguavil3,%20me%20llamo%20[NOMBRE]%20y%20me%20dedico%20al%20rubro%20de%20[RUBRO].%20Me%20gustaría%20recibir%20más%20información."
-              target="_blank"
-            >
-              Contactar por WhatsApp
+            <a class="btn-whatsapp"
+              href="{% url 'crear_pago' %}"
+              target="_blank">
+              Comprar
             </a>
           </div>
         </div>
